[package]
name = "blockchain_addresses"
version = "0.1.3"
edition = "2021"
authors = ["Etherdrake contact@etherdrake.com"]
description = "This crate holds token addresses for certain common tokens existing on various L1s and L2s."
readme = "README.md"
license = "MIT"
repository = "https://github.com/Etherdrake/blockchain-addresses"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
